Fix horizontal scroll on Safari

--- a/src/scss/includes/menu.scss
+++ b/src/scss/includes/menu.scss
@@ -1,41 +1,33 @@
+@keyframes appearMenu {
+  0% { transform: translateX(460px); }
+  100% { transform: translateX(0); }
+}
+
+@keyframes appearOverlay {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 .menu__overlay {
-  display: none;
+  display: block;
   height: 100%;
   width: 100vw;
   position: absolute;
   top:0;
   left: 0;
   background: linear-gradient(to bottom, rgba(108,118,148,0.98),rgba(53,60,82,0.98));
-}
-
-.menu__overlay--active {
-  display: block;
-  opacity: 0;
-  transition: opacity .6s;
-
-  .menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.menu__overlay--fade_active {
-  opacity: 1;
+  animation: appearOverlay 0.3s forwards;
 }
 
 .menu__panel {
   position: absolute;
   width: 460px;
   height: 100%;
-  right: -460px;
-  transition: right .3s;
+  right: 0;
   background: #fff;
-  visibility: hidden;
   display: flex;
   flex-direction: column;
+  animation: appearMenu 0.3s forwards;
 }
 
 .menu__panel__items_container {
@@ -74,11 +66,6 @@
   top: 18px;
   padding: 5px;
   color: $primary_clear;
-}
-
-.menu__panel--active {
-  visibility: visible;
-  right: 0;
 }
 
 .menu__panel__section__icon {
@@ -182,7 +169,7 @@
     }
   }
 
-  .menu__panel--active {
+  .menu__panel {
     width: 100%;
   }
 }
